test_data/Json/Unexpected/Unserializable/InvalidModelType/Operation/wrong.json.exception
Expected the model type 'Operation', but got soReallyUtterlyInvalid at: modelType